<resources>
    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>

    <string name="action_map">View in Map</string>

    <string name="action_email">Email and Promote this App</string>

    <string name="action_phone">Call Us</string>

    <string name="action_searchWeb">Search for Us</string>
    <string name="action_sms">SMS Us</string>
    <string name="action_webpage">View our Website</string>
    <string name="action_share">Share</string>

    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Label for the location preference [CHAR LIMIT=30] -->
    <string name="pref_location_label">Location</string>

    <!-- Key name for storing location in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_location_key" translatable="false">location</string>

    <!-- Default postal code for location preference [CHAR LIMIT=NONE]-->
    <string name="pref_location_default" translatable="false">Singapore</string>

    <string name="pref_units_label">Temperature Units</string>
    <string name="pref_units_key">units</string>
    <!-- Value in SharedPreferences for metric temperature unit option [CHAR LIMIT=NONE] -->
    <string name="pref_units_metric" translatable="false">Metric</string>

    <!-- Value in SharedPreferences for imperial temperature unit option [CHAR LIMIT=NONE] -->
    <string name="pref_units_imperial" translatable="false">Imperial</string>


</resources>

